# hexlet_django_blog

./: manage.py  pyproject.toml
hexlet_djano_blog/: asgi.py  settings.py  urls.py  wsgi.py
